--- a/templates/devices/device_list.html
+++ b/templates/devices/device_list.html
@@ -341,7 +341,7 @@ document.addEventListener('DOMContentLoaded', function() {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
-                    'X-CSRFToken': '{{ csrf_token() }}'
+                    'X-CSRFToken': getCsrfToken()
                 },
                 body: JSON.stringify({
                     device_id: deviceId
