--- a/templates/firmware/firmware_list.html
+++ b/templates/firmware/firmware_list.html
@@ -215,7 +215,7 @@ document.addEventListener('DOMContentLoaded', function() {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
-                    'X-CSRFToken': '{{ csrf_token() }}'
+                    'X-CSRFToken': getCsrfToken()
                 },
                 body: JSON.stringify({
                     firmware_id: firmwareId
