--- a/templates/rules/update_rules.html
+++ b/templates/rules/update_rules.html
@@ -224,7 +224,7 @@ document.addEventListener('DOMContentLoaded', function() {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
-                    'X-CSRFToken': '{{ csrf_token() }}'
+                    'X-CSRFToken': getCsrfToken()
                 },
                 body: JSON.stringify({
                     rule_id: ruleId
